Fixed alignment issue with css row.

--- a/app/app/globals.css
+++ b/app/app/globals.css
@@ -25,8 +25,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.space-between {
+.space-evenly {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
